# calculator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  README.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  alias.hpp
src/core/alias/: CMakeLists.txt
src/core/alias/include/alias/: alias.hpp
src/core/calculator_backend/: CMakeLists.txt
src/core/calculator_backend/include/calculator_backend/: calculator_backend.hpp
src/core/calculator_backend/src/: calculator_backend.cpp
src/core/math_expr/: CMakeLists.txt  addition.hpp  division.hpp  expression.hpp  literal.hpp  multiplication.hpp
src/core/math_expr/include/: subtraction.hpp
src/core/math_expr/include/math_expr/: addition.hpp  binary_expression.hpp  division.hpp  expression.hpp  literal.hpp  multiplication.hpp  subtraction.hpp  unary_addition.hpp  unary_expression.hpp  unary_subtraction.hpp
src/core/math_expr/src/: addition.cpp  binary_expression.cpp  division.cpp  expression.cpp  literal.cpp  multiplication.cpp  subtraction.cpp  unary_addition.cpp  unary_expression.cpp  unary_subtraction.cpp
src/core/parser/: CMakeLists.txt
src/core/parser/include/parser/: lexer.hpp  parser.hpp  token.hpp  token_type.hpp  token_type_utils.hpp
src/core/parser/src/: lexer.cpp  parser.cpp  token.cpp  token_type.cpp  token_type_utils.cpp
src/gui/: CMakeLists.txt
src/gui/calculator_controller/: CMakeLists.txt
src/gui/calculator_controller/include/calculator_controller/: calculator_controller.hpp
src/gui/calculator_controller/src/: calculator_controller.cpp
src/gui/control/: CMakeLists.txt
src/gui/control/button/: CMakeLists.txt  UButton.qml
src/gui/control/button/model/: ButtonModel.qml
src/gui/control/text_edit/: CMakeLists.txt  UTextEdit.qml
src/gui/launcher/: CMakeLists.txt
src/gui/launcher/include/launcher/: launcher.hpp
src/gui/launcher/qml/: Main.qml
src/gui/launcher/src/: launcher.cpp
src/gui/layout/: CMakeLists.txt  UButtonGrid.qml
test/: CMakeLists.txt
test/math_expr_test/: CMakeLists.txt  math_expr_test.cpp
test/parser_test/: CMakeLists.txt  parser_test.cpp
